# GMAP-GSNAP

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README  TODO  VERSION  acinclude.m4  aclocal.m4  config.site  configure  configure.ac
config/: acx_mmap_fixed.m4  acx_mmap_variable.m4  ax_ext.m4  builtin.m4  fopen.m4  madvise-flags.m4  popcnt.m4
src/: Makefile.am  Makefile.in  access.c  access.h  assert.c  assert.h  atoi.c  atoi.h  atoiindex.c  bigendian.c  bigendian.h  bitpack64-access.c  bitpack64-access.h  bitpack64-read.c  bitpack64-read.h  bitpack64-readtwo.c  bitpack64-write.c  bitpack64-write.h  blackboard.c  blackboard.h  block.c  block.h  bool.h  boyer-moore.c  boyer-moore.h  bytecoding.c  bytecoding.h  bzip2.h  changepoint.c  changepoint.h  chimera.c  chimera.h  chrnum.c  chrnum.h  chrom.c  chrom.h  chrsegment.c  chrsubset.c  chrsubset.h  cmet.c  (+233 more)
tests/: Makefile.am  Makefile.in  align.test.in  align.test.ok  coords1.test.in  coords1.test.ok  fa.iittest  iit.test.in  iit_dump.test.in  iit_get.out.ok  iit_get.test.in  iit_store.test.in  iittest.iit.ok  map.test.in  map.test.ok  setup.idxpositions.ok  setup1.test.in  setup2.test.in
util/: Makefile.am  Makefile.in  dbsnp_iit.pl.in  fa_coords.pl.in  gff3_genes.pl.in  gff3_introns.pl.in  gff3_splicesites.pl.in  gmap_build.pl.in  gmap_compress.pl.in  gmap_process.pl.in  gmap_setup.pl.in  gmap_uncompress.pl.in  gmap_update.pl.in  gtf_genes.pl.in  gtf_introns.pl.in  gtf_splicesites.pl.in  gvf_iit.pl.in  md_coords.pl.in  psl_introns.pl.in  psl_splices.pl.in  psl_splicesites.pl.in  sam_merge.pl.in  sam_restore.pl.in
